add social links + video playlist

--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 	
 	
 	<div class="bg-img1 size1 flex-w flex-c-m p-t-55 p-b-55 p-l-15 p-r-15" style="background-image: url('images/bg01.jpg');">
-		<div class="wsize1 bor1 bg1 p-t-175 p-b-45 p-l-15 p-r-15 respon1">
+		<div class="wsize1 bor1 bg1 p-t-64 p-b-45 p-l-15 p-r-15 respon1">
 			<div class="wrappic1">
 				<img src="images/logo.png" alt="LOGO">
 			</div>
 
 			<p class="txt-center m1-txt1 p-t-33 p-b-68">
-				لم يتم تطوير المنصة بعد
+				لم يتم تطوير المنصة بعد <br />
+				و لكن يمكنك متابعة دروسنا المجانية على اليوتيوب
 			</p>
-
-			
+			<center class="p-b-68">
+				<a class="social-icon" href="https://www.facebook.com/teqween.academy/"><img src="./images/facebook.svg" alt=""></a>
+				<a class="social-icon" href="https://www.youtube.com/channel/UCBTau2cfgBo8TVPj6S3WJNQ"><img src="./images/youtube.svg" alt=""></a>
+				<a class="social-icon" href="https://www.linkedin.com/company/teqween/"><img src="./images/linkedin.svg" alt=""></a>
+			</center>
+			<iframe width="100%" height="480" src="https://www.youtube.com/embed/videoseries?list=PLerPAquvszYcKypUxAQfKgABQMirEKguP" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
 
